# memalloc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  allocatable.h  allocatable.hpp  allocate_smart.hpp  allocate_unique_ptr.hpp  allocator.h  allocator.hpp  allocator_traits.hpp  main.cpp  makefile  mempool.cpp  mempool.hpp  mempool_alloc_policy.h  mempool_alloc_policy.hpp  mempool_allocator.h  mempool_allocator.hpp  object_traits.h  object_traits.hpp  timer.hpp
benchmark/: benchmark.list  makefile  run_benchmark.cpp
benchmark/butterfly/: main.cpp
benchmark/deallocate_reverseorder/: main.cpp
benchmark/deallocate_sameorder/: main.cpp
benchmark/list/: butterfly.list  butterfly_cacheline.list  butterfly_mempoolsize.list  deallocate_reverseorder.list  deallocate_sameorder.list  deallocate_sameorder_cacheline.list
examples/: main.cpp  makefile
include/: allocatable.hpp  allocator_traits.hpp  memalloc.hpp  mempool.hpp  mempool_allocator.hpp  standard_alloc_policy.hpp
src/: mempool.cpp
